# AI-Real-Estate-Assistant

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  .vercelignore  EXPERT_REVIEW.md  GITHUB_PUSH_GUIDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP_GUIDE.md  mypy.ini  package.json  playwright.config.ts  railway.toml  render.yaml  semgrep.yml  vercel.json
apps/api/: index.py  pyproject.toml  pytest.ini  requirements.txt
apps/api/agents/: hybrid_agent.py  query_analyzer.py  recommendation_engine.py  web_research_agent.py
apps/api/agents/services/: __init__.py  crm_connector.py  data_enrichment.py  legal_check.py  valuation.py
apps/api/ai/: agent.py  app_services.py  memory.py  prompt_templates.py
apps/api/analytics/: __init__.py  financial_metrics.py  market_insights.py  session_tracker.py  valuation_model.py
apps/api/api/: __init__.py  audit.py  auth.py  chat_sources.py  dependencies.py  health.py  main.py  models.py  observability.py  openapi_export.py  openapi_markdown.py  rbac.py
apps/api/api/middleware/: csrf.py  error_handler.py  request_size.py  security.py
apps/api/api/routers/: admin.py  auth.py  auth_jwt.py  rag.py  (+10 more)
apps/api/config/: __init__.py  settings.py
apps/api/core/: __init__.py  email.py  jwt.py  lockout.py  password.py
apps/api/data/: csv_loader.py  schemas.py
apps/api/db/: __init__.py  database.py  models.py  repositories.py  schemas.py
apps/api/i18n/: __init__.py  translations.py
apps/api/models/: __init__.py  provider_factory.py  user_model_preferences.py
apps/api/notifications/: __init__.py  alert_manager.py  alert_storage_stats.py  digest_generator.py  email_service.py  email_templates.py  notification_history.py  notification_preferences.py  scheduler.py  search_adapter.py  uptime_monitor.py
apps/api/rules/: __init__.py  base.py  config.py  definitions.py  engine.py
apps/api/services/: __init__.py  price_snapshot_service.py
apps/api/tests/: conftest.py  test_agent_system.py
apps/api/tools/: __init__.py  listing_generator_tools.py  property_tools.py  web_tools.py
apps/api/utils/: __init__.py  api_key_validator.py  auth_storage.py  circuit.py  commute_client.py  connection_pool.py  data_loader.py  data_protection.py  document_text_extractor.py  exporters.py  json_logging.py  ollama_detector.py  property_cache.py  response_cache.py  sanitization.py  saved_searches.py  web_fetch.py
apps/api/vector_store/: chroma_store.py  hybrid_retriever.py  knowledge_store.py  reranker.py
apps/api/workflows/: pipeline.py
(+403 files in other folders)
