[project]
name = "ai-real-estate-assistant"
version = "4.0.0"
description = "AI-powered real estate assistant with FastAPI backend and Next.js frontend"
authors = [
    {name = "Daniel Lopez", email = "daniel@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langchain>=0.3.0,<1.0.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "faker>=27.0.0",
    "yarl>=1.17.2",
    # Authentication
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "jinja2>=3.1.0",
    "cryptography>=42.0.0",
    "email-validator>=2.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "bandit>=1.7.6",
    "pip-audit>=2.7.3",
    "pre-commit>=4.3.0",
    "detect-secrets>=1.5.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "odfpy>=1.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "agents*", "analytics*", "config*", "models*", "notifications*", "workflows*", "tools*", "utils*", "vector_store*", "i18n*", "data*", "rules*", "ai*"]
exclude = ["frontend*", "tests*", "assets*", "artifacts*", "node_modules*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/integration/api/test_cors_integration.py" = ["I001"]
"tests/unit/test_csv_loader.py" = ["I001"]
"tests/unit/test_ci_parity_script.py" = ["E402"]
"api/main.py" = ["E402"]
"api/routers/*.py" = ["B008"]
"api/routers/tools.py" = ["I001"]
"api/deps/*.py" = ["B008"]
"agents/services/__init__.py" = ["I001", "F401"]
"agents/services/crm_connector.py" = ["I001"]
"agents/services/data_enrichment.py" = ["I001"]
"workflows/pipeline.py" = ["I001"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --timeout=300"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
timeout = 300

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
